# NextDownloader

./: .gitignore  .windsurfrules  Build AIUpscaler_2025-05-21T22-42-03.txt  Cargo.toml  README.md  build.sh  flutter_rust_bridge.yaml
.github/workflows/: auto-merge-dev-to-main.yml
.specstory/history/: 2025-05-21_14-25-アプリケーションビルドの手順.md  2025-05-21_15-22-folder-action-management-in-local-repository.md  2025-05-21_16-08-rustとflutterによる高性能ダウンローダー設計.md
acme/: README.md  nx.json  package.json  pnpm-lock.yaml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css  theme.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: filesystem.json  network.json
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/commands/: config.rs  dependency.rs  download.rs  mod.rs  utils.rs
apps/desktop/src/api/: config.ts  dependency.ts  download.ts  downloader.ts  utils.ts
apps/desktop/src/components/: DependencyCheck.tsx  DownloadCard.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
apps/desktop/src/pages/: DownloadsPage.tsx  HomePage.tsx  SettingsPage.tsx
apps/desktop/src/types/: config.ts  dependency.ts  download.ts
apps/flutter/linux/flutter/: generated_plugins.cmake
apps/flutter/macos/: Podfile
apps/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/flutter/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter/next_downloader/: README.md
apps/flutter/next_downloader/android/app/: build.gradle.kts
apps/flutter/next_downloader/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter/next_downloader/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter/next_downloader/test/: widget_test.dart
apps/flutter/next_downloader/windows/: CMakeLists.txt
apps/flutter/next_downloader/windows/runner/: Runner.rc  main.cpp
apps/flutter/rust/: Cargo.toml
apps/flutter/test/: widget_test.dart
apps/macos/NextDownloader/NextDownloaderCore/: Cargo.toml
apps/mobile/: README.md  build.yaml  frb_config.yaml  pubspec.yaml
apps/mobile/ios/: Info.plist
apps/mobile/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
apps/mobile/linux/flutter/: generated_plugin_registrant.cc
apps/mobile/macos/Runner/: DebugProfile.entitlements
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/next_downloader/: pubspec.yaml
apps/mobile/next_downloader/ios/Runner/: Info.plist
apps/mobile/next_downloader/linux/: CMakeLists.txt
apps/mobile/next_downloader/linux/runner/: my_application.cc
apps/mobile/rust/: build.rs
apps/mobile/rust/src/: api.rs  bridge_generated.rs  lib.rs
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.toml
apps/mobile/src-tauri/src/: main.rs
bolt-ndsrc/: Cargo.toml  package.json  pubspec.yaml
bolt-ndsrc/app/: _layout.tsx
bolt-ndsrc/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  profile.tsx  settings.tsx
bolt-ndsrc/constants/: colors.ts
bolt-ndsrc/context/: ThemeContext.tsx
bolt-ndsrc/src/: config.rs  download.rs  error.rs  main.rs  server.rs  storage.rs
bolt-ndsrc/supabase/migrations/: 20250518025645_long_prism.sql
bolt-ndsrc/utils/: validation.ts
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  cbindgen.toml
core/src/: config.rs  content_type.rs  downloader.rs  encoding.rs  error.rs  external.rs  ffi.rs  lib.rs  types.rs  utils.rs
core/src/downloader/: h265_converter.rs  mod.rs
core/src/streaming/: common.rs  dash.rs  hls.rs  mod.rs
core/src/tools/: aria2c.rs  dash.rs  ffmpeg.rs  hls.rs  mod.rs  ytdlp.rs
core/tests/: dash_resume_test.rs  downloader_tests.rs
docs/: ARCHITECTURE.md  KNOWLEDGE.md  PLANNING.md  TASK.md
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/flutter/: Cargo.toml  build.sh
ffi/flutter/src/: lib.rs
ffi/src/: c_ffi.rs  flutter_bridge.rs  lib.rs  nextdownloader.udl  uniffi.rs
ffi/src/uniffi/: Cargo.toml  build.rs  generate_bindings.sh  lib.rs  nextdownloader.udl
ffi/src/uniffi/tests/: test_uniffi.rs
flutter_app/: pubspec.yaml
flutter_app/macos/: Podfile  rust_build.sh
flutter_app/macos/Runner/: Info.plist  MainFlutterWindow.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
gui/: package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  main.rs
macos-app/: README.md  build_rust_core.sh
macos-app/NextDownloader/: NextDownloaderApp.swift
macos-app/NextDownloaderCore/: DownloadService.swift  Models.swift  NextDownloaderCore.swift
plugins/download/: Cargo.toml
plugins/download/src/: lib.rs
plugins/download/tests/: plugin_tests.rs
swift/: nx.json
swift/Application/: DownloadManager.swift
swift/ChromeExtension/: manifest.json  popup.html
swift/ChromeExtension/js/: background.js  content.js  popup.js
swift/Domain/Entities/: DownloadError.swift  DownloadItem.swift
swift/Domain/UseCases/: DownloadService.swift
swift/Infrastructure/Services/: ExternalToolsService.swift
swift/Infrastructure/Tools/: Aria2cService.swift  FFmpegService.swift  YtDlpService.swift
swift/NextDownloader/: NextDownloaderApp.swift
swift/NextDownloader.xcodeproj/: project.pbxproj
swift/NextDownloader/Models/: ContentType.swift  DownloadOptions.swift  VideoFormat.swift  VideoInfo.swift
swift/NextDownloader/Services/: FFmpegService.swift  HlsDownloadService.swift  NativeMessagingService.swift  YtDlpService.swift
swift/acme/: README.md  nx.json  pnpm-lock.yaml
tauri-app/: jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.tsx  main.tsx  styles.css
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.toml
tauri-app/src-tauri/src/: main.rs
tauri-app/src/api/: downloader.ts
tauri-app/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
tauri-app/src/pages/: DownloadsPage.tsx  HomePage.tsx  SettingsPage.tsx
tauri-app/src/tests/: setupTests.ts
tauri-app/src/tests/__mocks__/: downloaderApi.ts
tauri-app/src/tests/__tests__/: DownloadsPage.test.tsx  HomePage.test.tsx  SettingsPage.test.tsx  downloaderApi.test.ts
(+19 files in other folders)
