[workspace]
members = [
    "core",
    "cli",
    "ffi",
    "tauri-app/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["NextDownloader Team"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uniffi = { version = "0.25", features = ["cli"] }
