[package]
name = "next_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0"
futures = "0.3"
notify-rust = "4.0"
toml = "0.8"
directories = "5.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
sha2 = "0.10"
url = "2.4"