[package]
name = "nextdownloader-cli"
version = "0.1.0"
edition = "2021"
authors = ["NextDownloader Team"]
description = "CLI interface for NextDownloader - a multi-platform video downloader"

[dependencies]
nextdownloader-core = { path = "../core" }
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
reqwest = "0.11"
