[package]
name = "nextdownloader-core"
version = "0.1.0"
edition = "2021"
authors = ["NextDownloader Team"]
description = "Core library for NextDownloader - a multi-platform video downloader"

# ライブラリタイプの指定
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.10.5"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
log = "0.4"
libc = "0.2"
tauri = { version = "2.0.0", optional = true }

[features]
default = ["ffi"]
ffi = []
tauri-plugin = ["dep:tauri"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = "0.2"
