[package]
name = "nextdownloader-core"
version = "0.1.0"
edition = "2021"
authors = ["NextDownloader Team"]
description = "NextDownloader - コアライブラリ"
license = "MIT"
repository = "https://github.com/kazukinakai/NextDownloader"

[dependencies]
# 非同期処理
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"

# エラー処理
thiserror = "1.0.57"
anyhow = "1.0.79"

# シリアライズ/デシリアライズ
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# HTTP通信
reqwest = { version = "0.11.24", features = ["json", "stream"] }
url = "2.5.0"

# ロギング
log = "0.4.21"
env_logger = "0.11.3"

# ファイルシステム
dirs = "5.0.1"
tempfile = "3.10.1"
walkdir = "2.4.0"

# 並行処理
parking_lot = "0.12.1"
rayon = "1.8.1"

# ユーティリティ
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
regex = "1.10.3"
lazy_static = "1.4.0"

# HLS/DASH処理
m3u8-rs = "6.0.0"
dash-mpd = "0.15.0"
bytes = "1.5.0"
async-stream = "0.3.5"

# FFmpeg連携
rust-ffmpeg = { package = "ffmpeg-next", version = "6.1.0", optional = true }
ffmpeg-sys-next = { version = "6.1.0", optional = true }
videolan-ffi = { version = "0.1", optional = true, default-features = false, features = ["libvlc-sys"] }

[dev-dependencies]
mockall = "0.12.1"
rstest = "0.18.2"
tempfile = "3.10.1"
tokio-test = "0.4.3"

[features]
default = []
ffmpeg = ["rust-ffmpeg", "ffmpeg-sys-next"]
vlc = ["videolan-ffi"]
test-integration = []