[package]
name = "nextdownloader-gui"
version = "0.1.0"
edition = "2021"
authors = ["NextDownloader Team"]
description = "GUI for NextDownloader - a multi-platform video downloader"
build = "build.rs"

[dependencies]
nextdownloader-core = { path = "../../core", features = ["tauri-plugin"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-updater = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
