[package]
name = "nextdownloader_flutter_bridge"
version = "0.1.0"
edition = "2021"

# ワークスペースから独立させるための設定
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
flutter_rust_bridge = "=2.10.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }

# 既存のNextDownloaderコアを依存関係として追加（コメントアウト）
# nextdownloader_core = { path = "../../../core" }