[package]
name = "nextdownloader-macos"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "macOS bindings for NextDownloader"
license = "MIT"
repository = "https://github.com/yourusername/NextDownloader"

[lib]
name = "nextdownloader_macos"
crate-type = ["staticlib", "cdylib"]

[dependencies]
nextdownloader-core = { path = "../../../../packages/core" }
objc = "0.2.7"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
core-foundation = "0.9.3"
core-graphics = "0.23.1"

[build-dependencies]
cbindgen = "0.24.0"
